--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .background {
   width: 100%;
+  height: 96vh;
   padding: 0%;
   height: 100vh;
   margin: 0%;
@@ -14,6 +15,9 @@
   width: 35rem;
   height: 28rem;
   border-radius: 10px;
+  margin-top: 3rem;
+  margin-bottom: 4rem;
+  margin-left: 20%;
 }
 
 .contentStyle {
