--- a/src/App.css
+++ b/src/App.css
@@ -45,6 +45,7 @@
     box-shadow: 2px 2px 2px rgb(207, 202, 202);
     width: 18rem;
     height: 30rem;
+    margin-left: 0rem;
     margin-bottom: 4rem;
     margin-top: 3rem;
     border-radius: 10px;
