--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
   padding: 0%;
   height: 100vh;
   margin: 0%;
+  overscroll-behavior-block:auto;
   overflow-y: hidden;
 }
 .custom-modal .ant-modal-content {
