--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,10 @@
 .background {
   width: 100%;
-  height: 96vh;
+  
   padding: 0%;
   height: 100vh;
   margin: 0%;
-  overscroll-behavior-block:none;
-  overflow-y: hidden;
+  overflow: hidden;
 }
 .custom-modal .ant-modal-content {
   background-color:#333;
