--- a/src/App.css
+++ b/src/App.css
@@ -81,12 +81,13 @@ p{
 
 @media only screen and (min-width: 325px) and (max-width: 720px) {
   .background {
-    overflow: hidden;
+    overflow-y: hidden;
   }
   .backgroundImage {
-    width: 100%;
-    height: 100vh;
-    position: relative;
+    
+    display: flex;
+    
+    overflow-y: hidden;
   }
 
   .imageSize {
