--- a/src/App.css
+++ b/src/App.css
@@ -51,14 +51,15 @@
 }
 
 
-p{
-  background-color: transparent;
-}
+
 .backgroundImage {
-  object-fit: cover;
+  object-fit:cover;
   overflow: hidden;
   width: 100%;
-  position: relative;
+  
+}
+.no-scroll {
+  overflow-y: hidden;
 }
 .imageSize {
   
@@ -81,6 +82,9 @@ p{
 
 @media only screen and (min-width: 325px) and (max-width: 720px) {
   .background {
+    overflow-y: hidden;
+  }
+  .no-scroll {
     overflow-y: hidden;
   }
   .backgroundImage {
